<resources>
    <string name="app_name">NITCTravelTogether</string>
    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>

    <string name="pass">Enter Password</string>
    <string name="name">Enter name</string>
    <string name="last_name">Enter last name</string>
    <string name="phone">Enter Phone No</string>
    <string name="age">Enter Age</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="title_activity_main_screen">Map</string>

    <string name="destination">Enter Destination</string>
    <string name="seat">Enter No. of Seats</string>
    <string name="vehicle">Enter vehicle type(2/3/4 vehiler)</string>
    <string name="title_activity_home">NITC Travel Together</string>


    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="Offerlift">Offer Lift</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="needlift">Need Lift</string>
    <string name="sharefare">Share Fare</string>
    <string name="map">Map</string>

    <string name="title_activity_firstpage">firstpage</string>
    <string name="search_hint">Enter Email to Search</string>
    <string name="app_label">NITCTravelTogether</string>
    <string name="incomingrequest">Incoming Request</string>

</resources>
