<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/offerlift"
            android:title="@string/Offerlift" />
        <item
            android:id="@+id/needlift"
            android:icon="@drawable/needlift"
            android:title="@string/needlift" />
        <item
            android:id="@+id/sharefare"
            android:icon="@drawable/sharefare"
            android:title="@string/sharefare" />
        <item
            android:id="@+id/map"
            android:icon="@mipmap/rsz_icon"
            android:title="@string/map" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="Logout"/>
    </group>
</menu>
