<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nitctraveltogether.ui.home.HomeFragment"
        android:label="@string/Offerlift"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.nitctraveltogether.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/needlift"
        android:name="com.example.nitctraveltogether.ui.gallery.GalleryFragment"
        android:label="@string/needlift"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/logout"
        android:name="com.example.nitctraveltogether.ui.logout"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/sharefare"
        android:name="com.example.nitctraveltogether.ui.slideshow.SlideshowFragment"
        android:label="@string/sharefare"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/map"
        android:name="com.example.nitctraveltogether.ui.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
</navigation>