<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Registration">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:gravity="center_vertical"
        android:onClick="sendtologin"
        android:text="@string/signin_redirect"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbtn"
        app:layout_constraintVertical_bias="0.176" />

    <Button
        android:id="@+id/rbtn"
        android:layout_width="340dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btnsignup_gradient"
        android:onClick="register"
        android:text="@string/sign_upReg"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rage" />

    <AutoCompleteTextView
        android:id="@+id/rage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rect"
        android:drawablePadding="10dp"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <AutoCompleteTextView
        android:id="@+id/rphone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rect"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlname" />

    <AutoCompleteTextView
        android:id="@+id/rpass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="85dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rect"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/passwordReg"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remail" />


    <AutoCompleteTextView
        android:id="@+id/remail"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rect"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="NITC Email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbarThumbHorizontal="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/rlname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rect"
        android:drawablePadding="10dp"
        android:hint="@string/lastName"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rname" />


    <AutoCompleteTextView
        android:id="@+id/rname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rect"
        android:drawablePadding="10dp"
        android:hint="@string/firstName"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rlname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpass" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="287dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rphone"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rgenderm"
            android:layout_width="123dp"
            android:layout_height="54dp"
            android:buttonTint="#FF4081"
            android:checked="true"
            android:text="Male"
            android:textColor="#605454" />

        <RadioButton
            android:id="@+id/rgenderf"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:buttonTint="#FF4081"
            android:text="Female"
            android:textColor="#5A4A4A" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>