<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

        <Button
            android:id="@+id/request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:onClick="offerLift"
            android:text="Offer Lift"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle" />

        <AutoCompleteTextView
            android:id="@+id/vehicle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="40dp"
            android:background="@color/design_default_color_secondary"
            android:drawablePadding="10dp"
            android:hint="@string/vehicle"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="#131313"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seat" />

        <AutoCompleteTextView
            android:id="@+id/seat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="40dp"
            android:background="@color/design_default_color_secondary"
            android:drawablePadding="10dp"
            android:hint="@string/seat"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="#121111"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/vehicle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destination" />

        <AutoCompleteTextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="40dp"
            android:background="@color/design_default_color_secondary"
            android:drawablePadding="10dp"
            android:hint="@string/destination"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="#070707"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/seat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="40dp"
            android:background="@color/design_default_color_secondary"
            android:drawablePadding="10dp"
            android:hint="@string/emailReg"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="#070707"
            android:textSize="15sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />






    </androidx.constraintlayout.widget.ConstraintLayout>
