<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btnsignin_gradient"
        android:onClick="register"
        android:text="Register"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintVertical_bias="0.875" />

    <ImageView
        android:id="@+id/ivSignIn"
        android:layout_width="382dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="Sign in text on registration activity"
        android:src="@drawable/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_rect"
        android:drawableStart="@drawable/icon_person"
        android:drawableLeft="@drawable/icon_person"
        android:drawablePadding="10dp"
        android:hint="@string/emailReg"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/password"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_rect"
        android:drawableStart="@drawable/icon_password"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:hint="@string/passwordReg"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signin"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/btnsignin_gradient"
        android:onClick="login"
        android:text="@string/sign_inLog"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="195dp"
        android:layout_height="214dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/ivSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/appicon" />

</androidx.constraintlayout.widget.ConstraintLayout>